--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+arrow==1.0.3
 autopep8==1.5.6
 certifi==2020.12.5
 chardet==4.0.0
@@ -9,7 +10,10 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
 pycodestyle==2.7.0
+python-dateutil==2.8.1
 requests==2.25.1
+requests-cache==0.5.2
+six==1.15.0
 toml==0.10.2
 urllib3==1.26.4
 Werkzeug==1.0.1
