--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 pycodestyle==2.7.0
 python-dateutil==2.8.1
 requests==2.25.1
